Fixes layout issue when dragging and drop cards from region to region

--- a/src/scss/3_components/layout/cards.scss
+++ b/src/scss/3_components/layout/cards.scss
@@ -326,6 +326,12 @@ a.card {
   }
 
   // Card decks in Layout Builder.
+
+  .layout-builder__region {
+    display: flex;
+    flex-flow: column nowrap;
+  }
+
   .layout-builder-block {
     padding: 0;
     width: 100%;
